syntax = "proto3";

option go_package = "igopb";

message InterpretRequest {
  string input = 1;
}

message InterpretResponse {
  Result result = 1;
}

message Result {
  string evaluatedTo = 1;
  string info = 2;
}